--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 		<link rel="stylesheet" type="text/css" href="interface.css" />
 	</head>
 
+	<header>
+	Test
+	</header>
+
 	<body>
+
+
 
 		<button onClick="teethClick(1)">click 4 teef</button>
 		<br />
@@ -25,4 +31,8 @@
 
 		<script type="text/javascript" src="main.js"></script>
 	</body>
+	
+	<footer>
+	Wiki | Patreon | Discord | <a href="https://github.com/Aranunna/Ork-Simulator" target="_blank">GitHub</a>
+	</footer>
 </html>
