--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 	test
 	</div>
 
-	<body>
+	<nav>
 
 
-
+		<div id="myProgress">
+			<div id="myBar"></div>
+		</div>	
+		<br />
+		<button onClick="move()">Scavenge 4 Teef</button>
+		<br />
 		<button onClick="teethClick(1)">click 4 teef</button>
 		<br />
 		Teeth: <span id="teeth">0</span>
@@ -27,6 +32,13 @@
 		<br />
 		Shoota Cost: <span id="shootaCost">10</span> teeth
 		<br />
+		<br />
+		<br />
+		To do list:
+		<br />
+		Hover tooltips
+		<br />
+		Reset mechanic
 
 
 
@@ -34,7 +46,7 @@
 
 
 		<script type="text/javascript" src="main.js"></script>
-	</body>
+	</nav>
 	
 	<footer>
 	Wiki | Patreon | Discord | <a href="https://github.com/Aranunna/Ork-Simulator" target="_blank">GitHub</a>
